--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,9 +3,13 @@
 }
 
 .header .container {
+  margin-left: auto;
+  margin-right: auto;
+
   @media screen and (min-width: 480px) {
     max-width: 480px;
   }
+
   @media screen and (min-width: 768px) {
     max-width: 768px;
   }
@@ -126,7 +130,12 @@
 
 .js-open-menu {
   margin-left: auto;
+  padding: 0;
   border: none;
+  &:hover,
+  &:focus {
+    fill: var(--acent-color);
+  }
   @media screen and (min-width: 768px) {
     display: none;
   }
@@ -138,6 +147,10 @@
   border: none;
   margin-bottom: 8px;
   padding: 0;
+  &:hover,
+  &:focus {
+    fill: var(--acent-color);
+  }
 }
 
 .js-menu-container {
@@ -147,7 +160,7 @@
   left: 0;
   background-color: #ffff;
   width: 100vw;
-  height: 100vh;
+  height: 101vh;
   padding-top: 21px;
   padding-bottom: 48px;
   transform: translateX(100%);
@@ -214,4 +227,10 @@
 .mob-social-item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
   margin-right: 10px;
+}
+
+.mob-header-nav {
+  & .link.current {
+    color: var(--acent-color);
+  }
 }
