--- a/sass/components/_studio-hero.scss
+++ b/sass/components/_studio-hero.scss
@@ -27,6 +27,8 @@
   }
 
   @media screen and (min-width: 1200px) {
+    padding-bottom: 200px;
+  padding-top: 200px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
