--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,8 @@ button {
   cursor: pointer;
 }
 
-.img {
-  width: 100%;
+img {
+  max-width: 100%;
   height: auto;
   display: block;
 }
@@ -482,6 +482,12 @@ body {
   letter-spacing: 0.02em;
   color: #2196f3;
 }
+@media screen and (max-width: 480px) {
+  .mob-tel {
+    font-size: 32px;
+    line-height: 1.18;
+  }
+}
 
 .mob-email {
   font-weight: 500;
@@ -510,6 +516,12 @@ body {
   letter-spacing: 0.02em;
   padding-right: 10px;
   color: #2196f3;
+}
+@media screen and (max-width: 480px) {
+  .mob-social-link {
+    font-size: 14px;
+    line-height: 1.22;
+  }
 }
 
 .mob-social-item:not(:last-child) {
@@ -670,7 +682,7 @@ body {
 .modal-comment {
   display: block;
   width: 100%;
-  height: 120px;
+  height: 100%;
   resize: none;
   left: 576px;
   top: 314px;
@@ -687,6 +699,11 @@ body {
 .modal-comment:hover {
   border: 1px solid var(--acent-color);
   outline: none;
+}
+@media screen and (min-width: 480px) {
+  .modal-comment {
+    height: 120px;
+  }
 }
 
 .policy-span {
@@ -791,7 +808,9 @@ body {
 }
 
 .portfolio-link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow var(--hover-duration) var(--hover-time-function);
 }
 .portfolio-link:hover, .portfolio-link:focus {
@@ -821,23 +840,21 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-bg-color);
 }
+@media screen and (max-width: 480px) {
+  .portfolio__text {
+    padding: 10px 10px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1, 56;
+  }
+}
 
 .cards {
+  flex-grow: 1;
   padding: 20px 24px;
   background: #ffffff;
   border: 1px solid #eeeeee;
   border-top: none;
-}
-
-@media screen and (min-width: 768px) {
-  .modify-cards {
-    padding-bottom: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .modify-cards {
-    padding-bottom: 20px;
-  }
 }
 
 .name {
@@ -854,17 +871,6 @@ body {
   line-height: 2;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-}
-
-@media screen and (min-width: 768px) {
-  .modify-text {
-    padding-bottom: 56px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .modify-text {
-    padding-bottom: 0;
-  }
 }
 
 .business {
@@ -1141,6 +1147,12 @@ body {
   letter-spacing: 0.02em;
   color: #2196f3;
 }
+@media screen and (max-width: 480px) {
+  .mob-tel {
+    font-size: 32px;
+    line-height: 1.18;
+  }
+}
 
 .mob-email {
   font-weight: 500;
@@ -1169,6 +1181,12 @@ body {
   letter-spacing: 0.02em;
   padding-right: 10px;
   color: #2196f3;
+}
+@media screen and (max-width: 480px) {
+  .mob-social-link {
+    font-size: 14px;
+    line-height: 1.22;
+  }
 }
 
 .mob-social-item:not(:last-child) {
