--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -15,8 +15,8 @@ ol {
 button {
   cursor: pointer;
 }
-.img {
-  width: 100%;
+img {
+  max-width: 100%;
   height: auto;
   display: block;
 }
@@ -60,4 +60,3 @@ body {
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
-
