--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -166,7 +166,7 @@
 .modal-comment {
   display: block;
   width: 100%;
-  height: 120px;
+  height: 100%;
   resize: none;
   left: 576px;
   top: 314px;
@@ -184,6 +184,9 @@
   &:hover {
     border: 1px solid var(--acent-color);
     outline: none;
+  }
+  @media screen and (min-width: 480px) {
+    height: 120px;
   }
 }
 
