--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -43,15 +43,16 @@
 }
 
 .portfolio-link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
   transition: box-shadow var(--hover-duration) var(--hover-time-function);
 
   &:hover,
   &:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
   }
-  
 }
 
 .portfolio__items:hover .portfolio__text {
@@ -64,6 +65,12 @@
 }
 
 .portfolio__text {
+  @media screen and (max-width: 480px) {
+    padding: 10px 10px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1, 56;
+  }
   position: absolute;
   top: 0;
   height: 100%;
@@ -72,7 +79,7 @@
   padding: 77px 24px;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1,56;
+  line-height: 1, 56;
   letter-spacing: 0.03em;
 
   background-color: rgba(33, 150, 243, 0.9);
@@ -80,26 +87,13 @@
 }
 
 .cards {
+  flex-grow: 1;
   padding: 20px 24px;
 
   background: #ffffff;
   border: 1px solid #eeeeee;
   border-top: none;
-  
 }
-
-.modify-cards {
-  @media screen and (min-width: 768px) {
-    padding-bottom: 0;
-  }
-  @media screen and (min-width: 1200px) {
-    padding-bottom: 20px;
-  }
-  
-  
-}
-
-
 
 .name {
   margin-bottom: 4px;
@@ -118,14 +112,4 @@
   letter-spacing: 0.03em;
 
   color: var(--primary-text-color);
-}
-
-.modify-text {
-  @media screen and (min-width: 768px) {
-    padding-bottom: 56px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding-bottom: 0;
-  }
-  
 }
