--- a/css/main.css
+++ b/css/main.css
@@ -941,6 +941,22 @@ body {
   }
 }
 
+@media not all, (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .business {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-960.jpg);
+  }
+}
+@media not all, screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .business {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-1536.jpg);
+  }
+}
+@media not all, screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .business {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg-hero-3200.jpg);
+  }
+}
+
 .header-logo {
   font-family: "Raleway";
   font-weight: 700;
