--- a/sass/components/_studio-hero.scss
+++ b/sass/components/_studio-hero.scss
@@ -28,7 +28,7 @@
 
   @media screen and (min-width: 1200px) {
     padding-bottom: 200px;
-  padding-top: 200px;
+    padding-top: 200px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -70,5 +70,35 @@
   @media screen and (min-width: 1200px) {
     font-size: 44px;
     line-height: 1.36;
+  }
+}
+
+.business {
+  @media not all, (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/bg-hero-960.jpg);
+  }
+
+  @media not all,
+    screen and (min-width: 768px) and (min-resolution: 192dpi),
+    screen and (min-width: 768px) and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/bg-hero-1536.jpg);
+  }
+
+  @media not all,
+    screen and (min-width: 1200px) and (min-resolution: 192dpi),
+    screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/bg-hero-3200.jpg);
   }
 }
